--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "devDependencies": {
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11"
+  },
+  "scripts": {
+    "dev": "tailwindcss -i ./src/input.css -o ./public/output.css --watch",
+    "build": "tailwindcss -i ./src/input.css -o ./public/output.css --minify"
   }
 }
